--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ SQLAlchemy==1.4.36
 loguru==0.6.0
 pytest==7.1.2
 pytest-cov==3.0.0
+email-validator==1.3.0
 Flask==2.2.2
 Flask-Login==0.6.2
 Flask-SQLAlchemy==2.5.1
