--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,3 +39,9 @@ skip_glob = "*/migrations/*.py"
   ]
   [tool.coverage.report]
     skip_empty = true
+
+[tool.djlint]
+  ignore = 'H017'
+  # profile = "jinja"
+  use_gitignore = true
+  preserve_blank_lines = true
