--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ skip_glob = "*/migrations/*.py"
     skip_empty = true
 
 [tool.djlint]
-  ignore = 'H017'
-  # profile = "jinja"
+  ignore = 'H017,H025'
+  profile = "jinja"
   use_gitignore = true
   preserve_blank_lines = true
