--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ skip_glob = "*/migrations/*.py"
   [tool.coverage.report]
     skip_empty = true
     skip_covered = true
+    # show_missing = true
 
 [tool.djlint]
   ignore = 'H017,H025'
