--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,12 @@ exclude = '''
 profile = "black"
 skip_glob = "*/migrations/*.py"
 
+[tool.pytest.ini_options]
+log_cli = false
+log_cli_level = "INFO"
+log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
+log_cli_date_format = "%Y-%m-%d %H:%M:%S"
+
 [tool.coverage]
   [tool.coverage.run]
   source = ['app']
