--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,7 +82,7 @@ log_cli_date_format = "%Y-%m-%d %H:%M:%S"
     # show_missing = true
 
 [tool.djlint]
-  ignore = 'H017,H025'
+  ignore = 'H017,T028'
   profile = "jinja"
   use_gitignore = true
   preserve_blank_lines = true
