--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,12 @@ repos:
         args: [--filter-files]
         files: \.py$
 
+- repo: https://github.com/pre-commit/mirrors-prettier
+  rev: v3.0.0
+  hooks:
+    -   id: prettier
+        files: \.js$
+
 -   repo: https://github.com/Riverside-Healthcare/djLint
     rev: v1.31.1
     hooks:
