--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,7 @@ log_cli_date_format = "%Y-%m-%d %H:%M:%S"
     # show_missing = true
 
 [tool.djlint]
+  indent_size=2
   ignore = 'H017,T028'
   profile = "jinja"
   use_gitignore = true
