--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,10 +13,10 @@ repos:
         files: \.py$
 
 - repo: https://github.com/pre-commit/mirrors-prettier
-  rev: v3.0.0
+  rev: v3.0.3
   hooks:
     -   id: prettier
-        args: [--end-of-line=crlf]
+        args: [--end-of-line=crlf, --print-width=100]
         files: \.js$
 
 -   repo: https://github.com/Riverside-Healthcare/djLint
