--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ omit = [
 
 [tool.coverage.report]
 skip_empty = true
-skip_covered = true
+# skip_covered = true
 # show_missing = true
 
 [tool.djlint]
